go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__already_patched_import.snap
---
source: src/builder/patcher.rs
expression: result
---
package main

import testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"

func BenchmarkExample(b *testing.B) {
    // benchmark code
}
