go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__import_testify.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package main_compat
import (
    testing "github.com/CodSpeedHQ/codspeed-go/testing/testing"

    "github.com/CodSpeedHQ/codspeed-go/pkg/testify/assert"
    "github.com/CodSpeedHQ/codspeed-go/pkg/testify/require"
)
