go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__import_testing_and_slogassert.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package main_compat
import (
    testing "github.com/CodSpeedHQ/codspeed-go/testing/testing"
    "fmt"
    "github.com/CodSpeedHQ/codspeed-go/pkg/slogassert"
)
