go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__import_with_extra_whitespace.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package main_compat

import (
    "fmt"

    testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"

    "strings"
)
