go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__import_with_testing_string.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package main_compat
import testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"
import "fmt"

func TestExample(t *testing.T) {
    fmt.Println("testing")
}
