go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__many_testing_imports.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package subpackages
import (
	"bytes"
	"io"
	testing "github.com/CodSpeedHQ/codspeed-go/testing/testing"
	fstest "github.com/CodSpeedHQ/codspeed-go/testing/testing/fstest"
	iotest "github.com/CodSpeedHQ/codspeed-go/testing/testing/iotest"
	synctest "github.com/CodSpeedHQ/codspeed-go/testing/testing/synctest"
)
