go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__mixed_import_styles.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package main_compat

import testing "github.com/CodSpeedHQ/codspeed-go/testing/testing"

import (
    "fmt"
    "something"
)
