go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__multiline_import_replacement.snap
---
source: go-runner/src/builder/patcher.rs
expression: result
---
package main_compat

import (
    "fmt"
    testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"
    "strings"
)

func TestExample(t *testing.T) {
    // test code
}
