go-runner/src/builder/snapshots/codspeed_go_runner__builder__patcher__tests__multiline_import_with_tabs.snap
---
source: src/builder/patcher.rs
expression: result
---
package main

import (
	"fmt"
	testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"
	"strings"
)
